# mast

./: .gitignore  ARCHITECTURE.md  AUTOTEST_README.md  BIOTIS-checkpoint.ipynb  BIOTIS.ipynb  CHANGELOG.md  CJS_data_prep.py  COMPLETE_SUMMARY.md  CONTRIBUTING.md  Classify_3  Classify_3.py  FINAL_OVERLAP_IMPLEMENTATION_PLAN.md  GETTING_STARTED.md  GITHUB_DESKTOP_GUIDE.md  INFRASTRUCTURE_SUMMARY.md  JOSS_SUBMISSION_GUIDE.md  LOGGING_IMPROVEMENTS.md  MAST_Project.ipynb  OVERLAP_REMOVAL_ANALYSIS.md  OVERLAP_REMOVAL_REVAMP_PLAN.md  PRE_MERGE_CHECKLIST.md  PROPOSED_UNSUPERVISED_REMOVAL.py  PUBLICATIONS.md  PyMAST_Complete_Project.ipynb  QUICK_REFERENCE.md  README.md  REFACTOR_STATUS.md  REFACTOR_SUMMARY.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.0.0.md  REVISED_OVERLAP_STRATEGY.md  RUN_BUILD.bat  RUN_TESTS.bat  TESTING.md  TESTING_QUICKREF.md  TESTING_SETUP.md  TESTING_SIMPLE.md  abtas.py  autotest.py  bouts.py  (+26 more)
.pylint.d/: biotas1.stats
.spyproject/: workspace.ini
.virtual_documents/: MAST_Project.ipynb
biotas/: __init__.py  __init__.py.rej  __init__BAK.py  __init__bak.py  biotas.py  false_positive.py  fish_history.py  formatter.py  overlap_removal.py  radio_project.py  table_merge.py  tte_obj.spydata
biotas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
biotas_refactor/: __init__.py  false_positive_refactor.py  formatter.py  naive_bayes.py  overlap_removal.py  parsers.py  predictors.py  radio_project.py  radio_project_refactor.py
data/: lotek fwfs.xlsx  srx1200_fwf.txt
docs/: API_REFERENCE.md  FAQ.md  INSTALLATION.md  TUTORIAL.md
examples/: README.md  advanced_example_with_logging.py  quick_start_example.py
logs/: run_one_test.py
mast/: __init__.py  parsers.py  predictors.py  radio_project.py
pymast/: __init__.py  fish_history.py  formatter.py  logger.py  naive_bayes.py  overlap_removal.py  overlap_removal_backup.py  parsers.py  predictors.py  radio_project.py  validation.py
pymast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: 01_import_data.py  02_train_data.py  03_classify_data.py  04_calculate_bouts.py  05_reduce_overlap.py  (+41 more)
(+41 files in other folders)
