[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymast"
version = "1.0.0"
description = "Movement Analysis Software for Telemetry (MAST) - False positive removal and movement analysis for radio telemetry data"
readme = "README.md"
authors = [
    {name = "Kevin P. Nebiolo", email = "kevin.nebiolo@kleinschmidtgroup.com"},
    {name = "Theodore Castro-Santos"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["telemetry", "radio-tracking", "fish", "wildlife", "movement-ecology", "false-positive"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "statsmodels>=0.12.0",
    "networkx>=2.5",
    "scipy>=1.7.1",
    "scikit-learn>=0.24.0",
    "h5py>=3.0.0",
    "dask>=2021.3.0",
    "dask-ml>=1.9.0",
    "distributed>=2021.3.0",
    "numba>=0.53.0",
    "tables>=3.8.0",
    "intervaltree>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/knebiolo/mast"
Documentation = "https://github.com/knebiolo/mast/blob/main/README.md"
Repository = "https://github.com/knebiolo/mast"
"Bug Tracker" = "https://github.com/knebiolo/mast/issues"

[tool.setuptools]
packages = ["pymast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
